--- a/Abstract/style.css
+++ b/Abstract/style.css
@@ -10,11 +10,12 @@
       "wdth" 100;
   }
 */
-body, html {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    width: 100%;
+body,
+html {
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+	width: 100%;
 }
 body {
 	font-size: 20px;
@@ -22,7 +23,6 @@ body {
 	vertical-align: baseline;
 	font-family: 'Noto Sans', sans-serif;
 }
-
 
 /* Header */
 
@@ -129,7 +129,7 @@ header {
 	transition: 0.3s;
 }
 
-section {
+.main-section {
 	width: 100%;
 	height: 400px;
 	background-color: #dadbf1;
@@ -145,12 +145,12 @@ section {
 	flex-direction: column;
 }
 
-.search-container > div {
+.search-container_title {
 	margin-bottom: 20px;
 	font-size: 75px;
 }
 
-form {
+.search-box {
 	width: 720px;
 	height: 65px;
 	border: 1px solid black;
@@ -254,7 +254,7 @@ form {
 
 footer {
 	width: 100%;
-	height: 400px;
+	height: 100%;
 	background-color: black;
 	margin-top: 100px;
 	color: #fff;
@@ -264,7 +264,7 @@ footer {
 	padding: 0px 30px 60px 30px;
 }
 
-.footer-containers {
+.footer-container {
 	display: flex;
 	flex-direction: row;
 }
@@ -337,42 +337,71 @@ a {
 		width: 100%;
 	}
 
+	.logo-wrapper{
+		margin-left: 90px;
+	}
 	.navbar-buttons {
 		display: none;
 	}
 
 	.navbar-mobile-buttons {
 		display: block;
-
+		margin-right: 90px;
 	}
 
 	/* Main */
 
 	/* Main - search bar */
 
+	.main-section {
+		justify-content: center;
+		align-items: center;
+	}
+	.search-container_title {
+		font-size: 70px;
+		width: 100%;
+	}
 
-
-
+	.search-box {
+		width: 100%;
+	}
 
 	/* Main - content */
+
 	.main-content {
 		display: block;
 		margin: 0;
 		overflow-x: hidden;
 	}
-	.category-list_items{
-		margin: 0 50px 0 50px;
-	}
-	.category-list_img{
-		width: 120px;
-		height: 120px;
+	.category-list_items {
 		margin: 0 50px 0 100px;
 	}
+	.category-list_img {
+		width: 120px;
+		height: 120px;
+		margin: 0 100px 0 50px;
+	}
 
-	/* .footer-containers {
-
-	} */
-
+	.footer-container {
+		width: 100%;
+		display: grid;
+		grid-template-columns: 150px;
+	}
+	.footer-column-copyright {
+		grid-column: 3/3;
+		grid-row: 1/3;
+	}
 }
 
 /*Responsive design Movil*/
+
+@media screen and (max-width: 720px) {
+	.main-section {
+		height: 300px;
+	}
+	.search-container_title {
+		font-size: 40px;
+		width: 100%;
+		justify-self: center;
+	}
+}
