Aplicando de manera correcta, la transición responsiva de la sección main de la pagina a 1200px

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
       "wdth" 100;
   }
 */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 body,
 html {
 	margin: 0;
@@ -87,6 +89,10 @@ header {
 .nav-help:hover::before {
 	transform: scaleX(1);
 }
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+/* Main */
 
 /* Menu */
 
@@ -188,14 +194,16 @@ header {
 	transition: 0.3s;
 }
 
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 /* Content */
 
 .main-content {
 	margin-top: 125px;
-	width: 100%;
 	display: grid;
-	grid-template-columns: 750px 750px;
-	justify-content: center;
+	grid-template-columns: 1fr  1fr;
+	padding-right: 0 500px 0 1px
 }
 
 .category-list_items {
@@ -203,6 +211,7 @@ header {
 	flex-direction: row;
 	padding-right: 15px;
 	margin: 0px 0px 48px 0px;
+	margin: 0 100px 0 100px;
 }
 
 .category-list_img {
@@ -250,9 +259,13 @@ header {
 	transform: scaleX(1);
 }
 
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 /* Footer */
 
-/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
+
 footer {
 	width: 100%;
 	background-color: black;
@@ -321,7 +334,7 @@ a {
 .footer-column-copyright > p {
 	margin: 0;
 }
-/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* Responsive*/
 
 .navbar-mobile-menu {
