--- a/style.css
+++ b/style.css
@@ -1,17 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-/*
-.noto-sans-<uniquifier> {
-    font-family: "Noto Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-*/
 
-/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 body,
 html {
 	margin: 0;
@@ -26,7 +16,8 @@ body {
 	font-family: 'Noto Sans', sans-serif;
 }
 
-/* Header */
+/* Header *//* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 
 header {
 	height: 88px;
@@ -45,21 +36,30 @@ header {
 	-webkit-transition: margin-top 0.7s ease;
 	transition: margin-top 0.7s ease;
 }
-/* Logo */
+/* Logo *//* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 .logo-wrapper {
 	display: flex;
 	justify-content: center;
 	margin-left: 120px;
 }
 .nav-logo,
-.nav-help,
-.logo-wrapper > div {
+.nav-help{
 	color: white;
 	text-decoration: none;
 	font-weight: lighter;
 	font-size: 25px;
-	margin-left: 5px;
 	position: relative;
+}
+
+.logo-bar_div{
+	width: 2px;
+	height: 100%;
+	display: block;
+	justify-self: center;
+	align-self: center;
+	background-color: white;
+	margin: 0 10px;
 }
 
 .nav-logo {
@@ -90,11 +90,11 @@ header {
 	transform: scaleX(1);
 }
 
-/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-/* Main */
+/* Main *//* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-/* Menu */
+/* Menu *//* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 
 .navbar-buttons {
 	padding-right: 140px;
@@ -194,9 +194,9 @@ header {
 	transition: 0.3s;
 }
 
-/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-/* Content */
+/* Content *//* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 
 .main-content {
 	margin-top: 125px;
@@ -258,9 +258,9 @@ header {
 	transform: scaleX(1);
 }
 
-/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-/* Footer */
+/* Footer *//* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 
 footer {
 	width: 100%;
@@ -330,8 +330,8 @@ a {
 .footer-column-copyright > p {
 	margin: 0;
 }
-/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
-/* Responsive*/
+/* Responsive*//* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
 
 .navbar-mobile-menu {
 	margin-right: 100px;
@@ -466,15 +466,114 @@ a {
 /*Responsive design Mobile*/
 
 @media screen and (max-width: 720px) {
+	/* header */
+
+	header {
+		width: 100%;
+	}
+
+	.logo-wrapper {
+		margin-left: 20px;
+	}
+	.nav-logo{
+		font-size: 20px
+	}
+
+	.nav-help{
+		font-size: 20px;
+	}
+	.navbar-mobile-menu {
+		display: flex;
+		margin-right: 40px;
+	}
+
+	.mobile-search_button > svg {
+		cursor: pointer;
+		box-sizing: border-box;
+		transition: 0.2s;
+		width: 35px;
+	}
+
+	.mobile-search_button:hover > svg {
+		scale: 1.1;
+		transition: 0.2s;
+	}
+	.mobile-menu_button > svg{
+		cursor: pointer;
+	}
+
+	/* Main */
+
+	/* Main - search bar */
+
 	.main-section {
-		height: 300px;
+		justify-content: center;
+		align-items: center;
+		height: 35vh;
+	}
+	.search-container{
+		width: 100%;
+		margin:0 10px;
 	}
 	.search-container_title {
-		font-size: 40px;
+		font-size: 35px;
+		text-align: center;
 		width: 100%;
-		justify-self: center;
+		margin-bottom: 40px;
 	}
-	* {
-		background-color: blue;
+
+	.search-box {
+		width: 100%;
+	}
+
+	/* Main - content */
+
+	.main-content {
+		display: block;
+		overflow-x: hidden;
+		margin: 0;
+		padding: 0 10px;
+	}
+	.category-list_items {
+		margin: 0 ;
+		height: 250px;
+	}
+	.category-list_img {
+		width: 80px;
+		height: 80px;
+		margin:0 20px 0 10px;
+	}
+
+	.category-list_content{
+		padding: 0;
+	}
+	.category-list_title{
+		font-size: 20px;
+		margin: 35px 0 20px 0;
+	}
+	.category-list_description{
+		font-size: 20px;
+	}
+
+	/* Footer  */
+
+	footer{
+		padding: 10px;
+	}
+
+	.footer-container {
+		width: 100%;
+		display: grid;
+		grid-column: span 1;
+	}
+	.footer-columns{
+		margin:0;
+	}
+	.footer-column-copyright {
+		margin-top: 40px;
+		grid-column: 1/3;
+		grid-row: 3/3;
+		justify-content: center;
+		padding: 20px;
 	}
 }
