--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
 	margin-left: 120px;
 }
 .nav-logo,
-.nav-help{
+.nav-help {
 	display: flex;
 	color: white;
 	text-decoration: none;
@@ -50,11 +50,9 @@ header {
 	font-size: 25px;
 	position: relative;
 }
-.logo-name{ 
+.logo-name {
 	margin-left: 10px;
 }
-
-
 
 .logo-bar_div {
 	width: 2px;
@@ -98,9 +96,6 @@ header {
 
 .navbar-buttons {
 	margin-right: 120px;
-}
-.nav-separation {
-	display: none;
 }
 
 .separation {
@@ -352,6 +347,7 @@ a {
 	-webkit-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 	background-color: white;
+	border-radius: 2px;
 }
 
 /* ------- Tablet ------- */
@@ -366,8 +362,63 @@ a {
 	}
 
 	/* header - mobile Menu  */
+
 	.navbar-buttons {
-		display: none;
+		display: flex;
+		position: absolute;
+		left: 100%;
+		top: 87px;
+		gap: 5;
+		flex-direction: column;
+		background-color: #000;
+		width: 100%;
+		align-items: center;
+		transition: 0.1s;
+		padding: 15px 0;
+	}
+
+	.separation {
+		display: block;
+		width: 50vw;
+		height: 1px;
+		background-color: #ffffff80;
+		margin: 5px 0;
+	}
+
+	.btn-request,
+	.btn-sign-in {
+		font-size: 20px;
+		padding: 10px 30px;
+		border-radius: 0px;
+		cursor: pointer;
+	}
+
+	.btn-request {
+		margin: 0;
+		background-color: #000;
+		border: 0px solid #ffffff;
+		color: #fff;
+		transition: 0.2s;
+	}
+
+	.btn-request:hover {
+		background-color: #ffffff00;
+		color: #878787;
+		transition: 0.3s;
+	}
+
+	.btn-sign-in {
+		margin: 0;
+		background-color: #4c5ed500;
+		border: 1px solid #4c5ed500;
+		color: #fff;
+		transition: 0.2s;
+	}
+
+	.btn-sign-in:hover {
+		background-color: #dadbf100;
+		color: #4c5fd5;
+		transition: 0.3s;
 	}
 
 	.navbar-mobile-menu {
@@ -383,11 +434,15 @@ a {
 	}
 
 	.mobile-search_button {
-		display: block;
+		display: flex;
 		cursor: pointer;
-		margin: 20px;
+		margin: 0 10px;
+		transition: 0.1s;
 	}
-
+	.mobile-search_button:hover {
+		scale: 1.1;
+		transition: 0.1s;
+	}
 
 	/* Aquí esta sección la animación de el menú hamburguesa */
 	.mobile-hamburger-menu.active .bar:nth-child(2) {
@@ -399,6 +454,10 @@ a {
 
 	.mobile-hamburger-menu.active .bar:nth-child(3) {
 		transform: translateY(-8px) rotate(-45deg);
+	}
+
+	.navbar-buttons.active {
+		left: 0;
 	}
 
 	/* Main - content ------------------------------------------------------*/
@@ -441,10 +500,11 @@ a {
 		justify-content: center;
 		align-items: center;
 	}
-	.nav-logo,.nav-help {
-		font-size: 20px;
+	.nav-logo,
+	.nav-help {
+		font-size: 15px;
 	}
-	.logo-name{
+	.logo-name {
 		margin-left: 10px;
 	}
 	/* Main */
